...
              <LockIcon height={LOCK_ICON_SIZE} width={LOCK_ICON_SIZE} />
            </View>
            <Text style={styles.warningText}>{askAi.neverShareSeedWarning}</Text>
          </View>
          <View style={styles.inputWrapper}>
            <TextInput
              testID="input_message"
              style={[
                styles.input,
                { color: uiColors.inputText, backgroundColor: uiColors.aiBubble },
              ]}
              value={input}
              onChangeText={setInput}
...
