...
    }
  };

  const options = [
    {
      title: walletText.createWallet,
      subtitle: 'Create a new USDT wallet',
      icon: <NewWalletIcon />,
      onPress: () => {
        close();
        navigation.dispatch(CommonActions.navigate('addUsdtWallet'));
      },
    },
...
